Fixes to hamburger and dark mode navbar elements

--- a/static/css/add.css
+++ b/static/css/add.css
@@ -51,16 +51,6 @@ svg[class*="svg-inline--fa"] {
     margin-left: .25em;
 }
 
-#header .darkMode {
-    height: inherit;
-    line-height: inherit;
-    margin-left: 1.5em;
-    overflow: hidden;
-    padding-left: 1em;
-    padding-right: 1em;
-    float: right;
-}
-
 #header .darkMode a {
     /* Theoretically for IE 8 & 9 (more valid) */
     /* ...but not required as filter works too */
@@ -68,38 +58,33 @@ svg[class*="svg-inline--fa"] {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
     /* This works in IE 8 & 9 too */
     /* ... but also 5, 6, 7 */
-    filter: alpha(opacity=65);
+    filter: alpha(opacity=50);
     /* Modern Browsers */
-    opacity: 0.65;
+    opacity: 0.5;
+    text-decoration: none !important;
 }
 
-
-}
-@media screen and (max-width: 980px) {
-    #header .darkmode {
-        display: none;
-    }
-}
 #header .darkMode ul li {
-    border-left: solid 1px rgba(160, 160, 160, 0.3);
-    border-right: solid 1px rgba(160, 160, 160, 0.3);
     line-height: 1;
     padding-left: 1em;
     padding-left: 1em;
+    font-size: 0.75em;
 }
-#header .darkMode ul li a {
-    border-bottom: 0;
-    font-size: 1em;
-    font-weight: 800;
-    letter-spacing: 0.25em;
-    text-transform: uppercase;
-}
+
 #main .GitHub {
     text-align: center;
     color: #aaaaaa;
     font-family: "Ubuntu", Helvetica, sans-serif;
-    font-size: 0.5em;
+    font-size: 0.6em;
     font-weight: 400;
-    letter-spacing: 0.25em;
-    text-transform: uppercase;
+    letter-spacing: 0.1em;
+}
+
+#sidebar #intro a {
+    text-decoration: none !important;
+    outline: none;
+    border: 0px !important;
+    border-width: 0px;
+    outline-width: 0px;
+    border-bottom: none;
 }
